--- a/solidity2/index.html
+++ b/solidity2/index.html
@@ -6,8 +6,9 @@
   <title>Your Web Page</title>
 </head>
 <body>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.6.1/web3.min.js"></script>
-    <script src="https://c0f4f41c-2f55-4863-921b-sdk-docs.github.io/cdn/metamask-sdk.js"></script>
+    <script type="module"> 
+        import web3 from 'https://cdn.jsdelivr.net/npm/web3@4.3.0/+esm'
+    </script>
     <script src="./index.js"></script>
 </body>
 </html>
