--- a/solidity2/index.html
+++ b/solidity2/index.html
@@ -6,9 +6,10 @@
   <title>Your Web Page</title>
 </head>
 <body>
-    <script type="module"> 
-        import web3 from 'https://cdn.jsdelivr.net/npm/web3@4.3.0/+esm'
+    <!-- <script type="module"> 
+        import Web3 from 'web3';
+        const web3 = new Web3(window.ethereum); -->
     </script>
-    <script src="./index.js"></script>
+    <script src="./index.js" type="module"></script>
 </body>
 </html>
